--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.9",
     "inter": "^2.0.1",
     "next": "13.1.2",
+    "next-base64": "^1.1.0",
     "next-cookie": "^2.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
