--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.2",
     "next-base64": "^1.1.0",
     "next-cookie": "^2.8.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.42.1",
