--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
     "inter": "^2.0.1",
+    "js-cookie": "^3.0.1",
     "next": "13.1.2",
     "next-base64": "^1.1.0",
     "next-cookie": "^2.8.0",
@@ -33,6 +34,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
